--- a/src/components/bet/bet-box-pc-1/css/bet_single.scss
+++ b/src/components/bet/bet-box-pc-1/css/bet_single.scss
@@ -162,15 +162,15 @@
               line-height: 26px;
               margin-left: 2px;
               background: var(--qq--theme-bg-add-sub);
-              border: 0.5px solid var(--qq--theme-bd-bet-pre-input);
+              border: 0.5px solid var(--q-gb-bd-c-7);
               border-radius: 4px 0px 0px 4px;
             }
             //预约投注输入框样式
             input {
               color: var(--qq--theme-text-color-handicap);
               border-radius: 0;
-              background-color: var(--qq--theme-bg-bet-pre-input);
-              border: 0.5px solid var(--qq--theme-bd-bet-pre-input);
+              background-color: var(--q-gb-bg-c-21);
+              border: 0.5px solid var(--q-gb-bd-c-7);
               border-left: 0;
               border-right: 0;
               width: 74px;
@@ -187,7 +187,7 @@
               height: 26px;
               line-height: 26px;
               background: var(--qq--theme-bg-add-sub);
-              border: 0.5px solid var(--qq--theme-bd-bet-pre-input);
+              border: 0.5px solid var(--q-gb-bd-c-7);
               border-radius: 0px 4px 4px 0px;
             }
           }
