--- a/project/yazhou-h5/src/pages/match-list/styles/match-container-champion.scss
+++ b/project/yazhou-h5/src/pages/match-list/styles/match-container-champion.scss
@@ -119,10 +119,8 @@
       }
     }
   }
-
   .limit-time {
     width: 100%;
-    padding-top: 0.05rem;
     height: 0.25rem;
     font-size: 0.1rem;
 
@@ -136,6 +134,7 @@
       height: 0.2rem;
       line-height: normal;
       margin: 0 auto;
+      color: #414655;
       border-radius: 0.04rem;
     }
   }
@@ -159,11 +158,11 @@
         content: ' ';
         display: block;
         border-radius: 0.015rem;
-        background-color: yellow;
       }
 
       .hpn-wrap {
         width: 96%;
+        color: #414655;
         margin-left: 0.06rem;
       }
     }
