--- a/project/yazhou-h5/src/pages/match-list/styles/match-container.scss
+++ b/project/yazhou-h5/src/pages/match-list/styles/match-container.scss
@@ -335,6 +335,7 @@
       display: flex;
       align-items: center;
       flex-wrap: nowrap;
+      padding: 0 0.1rem;
       .league-collapse-dir {
         width: 0.12rem;
         height: 0.06rem;
