--- a/project/yazhou-h5/src/pages/match-list/styles/match-container-champion.scss
+++ b/project/yazhou-h5/src/pages/match-list/styles/match-container-champion.scss
@@ -189,7 +189,7 @@
   padding-left: 0.1rem;
   height: 0.26rem;
   font-size: 0.11rem;
-  background-image: var(--q-color-linear-gradient-bg-19);
+  background-image: var(--q-gb-bg-lg-19);
   /*transform: translateY(3px);*/
   margin: 0 auto;
   border-radius: 0.06rem;
