--- a/project/yazhou-h5/src/pages/match-list/styles/index.scss
+++ b/project/yazhou-h5/src/pages/match-list/styles/index.scss
@@ -5,6 +5,9 @@
   position: relative;
   opacity: 1;
   transition: transform 0.2s;
+  .animation{
+    animation: my-animation 0.3s ease-in
+  }
   &.no-padding-bottom {
     padding-bottom: 0;
   }
@@ -123,5 +126,20 @@
     top: 0;
     left: 50%;
     transform: translateX(-50%);
+  }
+}
+
+@keyframes my-animation {
+  0% {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+  50% {
+    transform: translate3d(50%, 0, 0);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translate3d(100%, 0, 0);
+    opacity: 0;
   }
 }
