--- a/project/yazhou-h5/src/pages/match-list/styles/match-container.scss
+++ b/project/yazhou-h5/src/pages/match-list/styles/match-container.scss
@@ -215,7 +215,7 @@
         overflow: hidden;
         margin-top: -0.06rem;
 
-        > img {
+        > img,.img {
           width: 100%;
           object-fit: cover;
           height: 100%;
