H5  列表结构调整

--- a/project/yazhou-h5/src/pages/match-list/index.variables.scss
+++ b/project/yazhou-h5/src/pages/match-list/index.variables.scss
@@ -129,8 +129,9 @@
           }
         }
         .league {
-          background:var(--q-match-page-bg-color-96);
+          background:var(--q-gb-bg-lg-8);
           border-color: var(--q-gb-bd-c-3);
+          color: var(--q-match-fs-color-1);
 
           .league-title-text {
             color: var(--q-color-fs-color-34);
