--- a/project/yazhou-h5/src/css/variables/common/app.scss
+++ b/project/yazhou-h5/src/css/variables/common/app.scss
@@ -1,5 +1,4 @@
-// --------------------- 页面 公用样式  ---------------------
-
+/* 公用样式 */
 * {
   padding: 0;
   box-sizing: border-box;
@@ -1051,75 +1050,4 @@ i {
     transform: scaleY(0.5);
     transform-origin: 0 0;
   }
-}
-
-// --------------------- 页面 动画相关 ---------------------
-
-.animate-bounce-up {
-  animation-name: upAnimation;
-  transform-origin: center bottom;
-  animation-duration: 2s;
-  animation-fill-mode: both;
-  animation-iteration-count: infinite;
-  animation-delay: 0.5s;
-  position: relative;
-  z-index: 500;
-}
-
-@keyframes upAnimation {
-  0% {
-    transform: rotate(0deg);
-    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-  }
-  10% {
-    transform: rotate(-10deg);
-    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-  }
-  20% {
-    transform: rotate(10deg);
-    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-  }
-  28% {
-    transform: rotate(-8deg);
-    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-  }
-  36% {
-    transform: rotate(8deg);
-    transition-timing-function: cubic-bezier(0.755, 0.5, 0.855, 0.06);
-  }
-  42% {
-    transform: rotate(-6deg);
-    transition-timing-function: cubic-bezier(0.755, 0.5, 0.855, 0.06);
-  }
-  48% {
-    transform: rotate(6deg);
-    transition-timing-function: cubic-bezier(0.755, 0.5, 0.855, 0.06);
-  }
-  52% {
-    transform: rotate(-4deg);
-    transition-timing-function: cubic-bezier(0.755, 0.5, 0.855, 0.06);
-  }
-  56% {
-    transform: rotate(4deg);
-    transition-timing-function: cubic-bezier(0.755, 0.5, 0.855, 0.06);
-  }
-  60% {
-    transform: rotate(0deg);
-    transition-timing-function: cubic-bezier(0.755, 0.5, 0.855, 0.06);
-  }
-  100% {
-    transform: rotate(0deg);
-    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-  }
-}
-/*  全局公用的 A-Z 雪碧图 */
-.theme01 div[class*="team-logo-"] {
-  background-image:  var(--q-color-com-img-bg-132);
-  background-repeat: no-repeat;
-  background-size: 100%;
-}
-.theme02 div[class*="team-logo-"] {
-  background-image:  var(--q-color-com-img-bg-135);
-  background-repeat: no-repeat;
-  background-size: 100%;
 }
