--- a/project/yazhou-pc/src/css/common.scss
+++ b/project/yazhou-pc/src/css/common.scss
@@ -154,10 +154,10 @@ body {
   display: none;
 }
 .custom-format-web-icon-05 {
-  background-image: url("~public/image/common/png/novideo@2x.png") !important;
+  background-image: url("/image/common/png/novideo@2x.png") !important;
 }
 .custom-format-web-icon-06 {
-  background-image: url("~public/image/common/png/novideo.png") !important;
+  background-image: url("/image/common/png/novideo.png") !important;
 }
 .match-hot {
   position: absolute;
