--- a/src/base-h5/components/details/analysis-matches/styles/line-up.scss
+++ b/src/base-h5/components/details/analysis-matches/styles/line-up.scss
@@ -59,7 +59,7 @@
       width: 100%;
       height: 3.45rem;
       // TODO: var(--q-color-com-img-bg-91)
-      background:  url("~public/image/png/football_squad_background.png") no-repeat center;
+      background:  url("/image/png/football_squad_background.png") no-repeat center;
       // background-image: url("public/image/png/football_squad_background.png");
       background-size: 100% 100%;
       margin-bottom: 0.15rem;
@@ -215,7 +215,7 @@
     .basket-ball-field {
       width: 100%;
       height: 3.75rem;
-      background:  url("~public/image/png/basketball_squad_background.png") no-repeat center;
+      background:  url("/image/png/basketball_squad_background.png") no-repeat center;
       background-size: 100% 100%;
       margin-bottom: 0.15rem;
       display: flex;
