--- a/src/base-pc/pages/match-details-right/index.scss
+++ b/src/base-pc/pages/match-details-right/index.scss
@@ -420,7 +420,7 @@
               height: 10px;
               position: absolute;
               right: -10px;
-              background: url("~public/image/common/svg/red_up.svg") no-repeat center;
+              background: url("/image/common/svg/red_up.svg") no-repeat center;
             }
           }
         }
@@ -438,7 +438,7 @@
               height: 10px;
               position: absolute;
               right: -10px;
-              background: url("~public/image/common/svg/green_down.svg") no-repeat center;
+              background: url("/image/common/svg/green_down.svg") no-repeat center;
             }
           }
         }
@@ -541,7 +541,7 @@
             width: 50px;
             height: 50px;
             background-size: 100%;
-            background-image: url('~public/image/wwwassets/yabo/gif/loading.gif');
+            background-image: url('/image/wwwassets/yabo/gif/loading.gif');
           }
           .img-loading-y0 {
             position: relative;
@@ -549,7 +549,7 @@
             width: 50px;
             height: 50px;
             background-size: 100%;
-            background-image: url('~public/image/wwwassets/yabo/gif/loading_y0.gif');
+            background-image: url('/image/wwwassets/yabo/gif/loading_y0.gif');
           }
         }
       }
