fix:组件路径问题

--- a/src/base-pc/components/site-header/site-header.scss
+++ b/src/base-pc/components/site-header/site-header.scss
@@ -890,7 +890,7 @@
       .yb-site-left-width {
         .search-wrap{
           background-image: var(--q-gb-bg-lg-10);
-          border: 1px solid var(--q-site-header-color-11);
+          border: 1px solid var(--q-site-header-color-9);
           font-weight: 400;
           border-left: 0;
           position: relative;
