修改主题色引用错误

--- a/project/yazhou-h5/src/pages/match-list/index.variables.scss
+++ b/project/yazhou-h5/src/pages/match-list/index.variables.scss
@@ -122,7 +122,7 @@
                   }
                 }
                 .odd-value {
-                  color:var(--q-gb-bd-c-2);
+                  color:var(--q-gb-t-c-18);
                 }
               }
             }
@@ -319,7 +319,7 @@
                   }
                 }
                 .odd-value {
-                  color:var(--q-gb-bd-c-2);
+                  color:var(--q-gb-t-c-18);
                 }
               }
               /* ************** 新手版投注项选择样式 ************** -E */
@@ -376,7 +376,7 @@
                 }
               }
               .odd-value {
-                color:var(--q-gb-bd-c-2);
+                color:var(--q-gb-t-c-18);
               }
             }
             /* ************** 标准版投注项选择样式 ************** -E */
