--- a/src/base-h5/components/details/styles/details-theme/result_page.scss
+++ b/src/base-h5/components/details/styles/details-theme/result_page.scss
@@ -4,10 +4,10 @@
 [class*=theme0] {
   /*************** 马类编号开始 *************** -S*/
   .virtual-num {
-    color:var(--q-gb-bd-c-2);
+    color:var(--q-gb-t-c-18);
   }
   .virtual-on {
-    color:var(--q-gb-bd-c-2);
+    color:var(--q-gb-t-c-18);
   }
 
   /*************** 编号结束 *************** -E*/
