--- a/src/base-h5/components/details/styles/details-theme/temp.scss
+++ b/src/base-h5/components/details/styles/details-theme/temp.scss
@@ -84,7 +84,7 @@
       color:var(--q-gb-t-c-13);
     }
     .white_text {
-      color:var(--q-gb-bd-c-2);
+      color:var(--q-gb-t-c-18);
     }
     .details_color {
       background:var(--q-color-page-bg-color-2);
@@ -124,10 +124,10 @@
     }
     .white_text {
       .led {
-        color:var(--q-gb-bd-c-2) !important;
+        color:var(--q-gb-t-c-18) !important;
       }
 
-      color:var(--q-gb-bd-c-2) !important;
+      color:var(--q-gb-t-c-18) !important;
     }
     .details_color {
       background:var(--q-color-page-bg-color-2);
@@ -172,13 +172,13 @@
       }
     }
     .active_play {
-      color:var(--q-gb-bd-c-2);
+      color:var(--q-gb-t-c-18);
       background-color: var(--q-gb-bd-c-13) !important;
       .size-color {
-        color:var(--q-gb-bd-c-2);
+        color:var(--q-gb-t-c-18);
       }
       .ellipsis {
-        color:var(--q-gb-bd-c-2);
+        color:var(--q-gb-t-c-18);
       }
     }
   }
@@ -222,7 +222,7 @@
       background: var(--q-color-com-bg-color-26);
     }
     .white_text {
-      color:var(--q-gb-bd-c-2) !important;
+      color:var(--q-gb-t-c-18) !important;
     }
     // .details_color {
     //   background:var(--q-color-page-bg-color-2);
@@ -288,7 +288,7 @@
       background: var(--q-color-com-bg-color-26);
     }
     .white_text {
-      color:var(--q-gb-bd-c-2) !important;
+      color:var(--q-gb-t-c-18) !important;
     }
     .details_color {
       background:var(--q-color-page-bg-color-2);
@@ -338,7 +338,7 @@
       color: var(--q-color-com-fs-color-44) !important;
     }
     .active-play {
-      color:var(--q-gb-bd-c-2) ;
+      color:var(--q-gb-t-c-18) ;
       background-color: var(--q-match-page-bg-color-10) !important;
 
     }
@@ -379,7 +379,7 @@
       background: var(--q-color-com-bg-color-26);
     }
     .white_text {
-      color:var(--q-gb-bd-c-2) !important;
+      color:var(--q-gb-t-c-18) !important;
     }
     .details_color {
       background:var(--q-color-page-bg-color-2);
@@ -448,7 +448,7 @@
       background: var(--q-color-com-bg-color-26);
     }
     .white_text {
-      color:var(--q-gb-bd-c-2) !important;
+      color:var(--q-gb-t-c-18) !important;
     }
     .details_color {
       background:var(--q-color-page-bg-color-2);
@@ -505,7 +505,7 @@
     /*************** 每项odds结束 *************** -E*/
     .team-odds2 {
       background-color: var(--q-gb-bg-c-17);
-      color:var(--q-gb-bd-c-2);
+      color:var(--q-gb-t-c-18);
     }
   }
 
@@ -531,7 +531,7 @@
       background-color: var(--q-gb-bg-c-17);
       .temp9-name,
       .temp9-ov {
-        color:var(--q-gb-bd-c-2) !important;
+        color:var(--q-gb-t-c-18) !important;
       }
     }
     .virtual-bet-wrapper {
@@ -569,7 +569,7 @@
     .blue-color {
       background: var(--q-gb-bg-c-17);
       .odds-style {
-        color:var(--q-gb-bd-c-2) !important;
+        color:var(--q-gb-t-c-18) !important;
       }
       .virtual-num2,
       .virtual-num4 {
@@ -610,7 +610,7 @@
     .blue-color {
       background: var(--q-gb-bg-c-17);
       .odds-style {
-        color:var(--q-gb-bd-c-2) !important;
+        color:var(--q-gb-t-c-18) !important;
       }
     }
   }
@@ -640,7 +640,7 @@
     .bet-click {
       background-color: var(--q-gb-bg-c-17) !important;
       .on-color {
-        color:var(--q-gb-bd-c-2) !important;
+        color:var(--q-gb-t-c-18) !important;
       }
     }
     .win  .odds-new2 {
@@ -694,9 +694,9 @@
       background:var(--q-color-page-bg-color-2);
     }
     .white_text {
-      color:var(--q-gb-bd-c-2) !important;
+      color:var(--q-gb-t-c-18) !important;
       .ver-ali-top {
-        color:var(--q-gb-bd-c-2) !important;
+        color:var(--q-gb-t-c-18) !important;
       }
     }
     .play-name {
@@ -719,7 +719,7 @@
       color:var(--q-gb-t-c-13);
     }
     .size-color-wit {
-      color:var(--q-gb-bd-c-2);
+      color:var(--q-gb-t-c-18);
     }
     .size-color-imp {
       color:var(--q-gb-t-c-13) !important;
@@ -748,9 +748,9 @@
     .active {
       background: var(--q-match-page-bg-color-10) !important;
       .remark {
-        color:var(--q-gb-bd-c-2);
+        color:var(--q-gb-t-c-18);
         span {
-          color:var(--q-gb-bd-c-2);
+          color:var(--q-gb-t-c-18);
         }
       }
     }
@@ -785,10 +785,10 @@
       border-bottom: 1px solid var(--q-gb-bd-c-7);
     }
     .active-play {
-      color:var(--q-gb-bd-c-2);
+      color:var(--q-gb-t-c-18);
       background-color: var(--q-match-page-bg-color-10) !important;
       & > div {
-        color:var(--q-gb-bd-c-2);
+        color:var(--q-gb-t-c-18);
       }
     }
     .play-box.every5.border-top {
