--- a/src/base-h5/components/menu/template-1/menu.scss
+++ b/src/base-h5/components/menu/template-1/menu.scss
@@ -255,11 +255,11 @@
 
                         &>div {
                             &:first-child {
-                                color: var(--q-gb-bd-c-2);
+                                color: var(--q-gb-t-c-18);
                             }
 
                             &:last-child {
-                                color: var(--q-gb-bd-c-2);
+                                color: var(--q-gb-t-c-18);
                             }
                         }
                     }
