--- a/src/base-h5/css/bet/accept_rules.scss
+++ b/src/base-h5/css/bet/accept_rules.scss
@@ -19,7 +19,7 @@
     }
 
     p > span:not(.chu) {
-      color:var(--q-gb-bd-c-2);
+      color:var(--q-gb-t-c-18);
       background-color: var(--q-gb-bd-c-13);
     }
     .chu {
