--- a/src/base-h5/css/bet/bet_mix_box.scss
+++ b/src/base-h5/css/bet/bet_mix_box.scss
@@ -71,7 +71,7 @@
 
     }
     .bet-box {
-      color:var(--q-gb-bd-c-2);
+      color:var(--q-gb-t-c-18);
       background: var(--q-color-linear-gradient-bg-21);
     }
     .mix-show-box:nth-last-child(1) .content_box {
