--- a/src/base-h5/css/bet/bet_mix_show2.scss
+++ b/src/base-h5/css/bet/bet_mix_show2.scss
@@ -9,7 +9,7 @@
       background-color:  var(--q-color-page-bg-color-22);
     }
     .timer-down {
-      color:var(--q-gb-bd-c-2);
+      color:var(--q-gb-t-c-18);
       background: var(--q-gb-bd-c-13);
     }
     .locked-shadow {
@@ -23,7 +23,7 @@
     }
     .invalid-span,
     .invalid-span2 {
-      color:var(--q-gb-bd-c-2);
+      color:var(--q-gb-t-c-18);
       background: var(--q-gb-bd-c-8);
     }
     .line {
