--- a/src/base-h5/css/pages/match-container-champion.scss
+++ b/src/base-h5/css/pages/match-container-champion.scss
@@ -40,7 +40,7 @@
   .active-item {
     .on,
     .odds {
-      color:var(--q-gb-bd-c-2) !important;
+      color:var(--q-gb-t-c-18) !important;
     }
   }
 }
