--- a/src/base-h5/pages/match-list/styles/may-also-like.scss
+++ b/src/base-h5/pages/match-list/styles/may-also-like.scss
@@ -117,7 +117,7 @@
 
       .counting {
         // color: var(--q-color-com-fs-color-38);
-        color: var(--q-gb-bd-c-2);
+        color: var(--q-gb-t-c-18);
         margin-left: 0.05rem;
       }
 
@@ -137,7 +137,7 @@
     }
 
     :deep(.special) {
-      color: var(--q-gb-bd-c-2);
+      color: var(--q-gb-t-c-18);
       padding-top: 1px;
     }
   }
