--- a/project/yazhou-h5/src/layouts/index.scss
+++ b/project/yazhou-h5/src/layouts/index.scss
@@ -13,7 +13,7 @@
     .folat-menu::before {
       border: 1px solid var(--q-color-com-border-color-13);
       background-color: var(--q-color-com-bg-color-13);
-      color: var(--q-gb-bd-c-2);
+      color: var(--q-gb-t-c-18);
     }
 
     /* ************** 悬浮按钮 ************** -E */
