--- a/src/base-h5/css/bet/bet_mix_show.scss
+++ b/src/base-h5/css/bet/bet_mix_show.scss
@@ -18,7 +18,7 @@
     }
     .pankou-change {
       background-color: var(--q-color-com-bg-color-13);
-      color:var(--q-gb-bd-c-2);
+      color:var(--q-gb-t-c-18);
       border-radius: 2px;
       padding-left: 0.02rem;
       padding-right: 0.02rem;
@@ -34,7 +34,7 @@
     }
     .invalid-span,
     .invalid-span2 {
-      color:var(--q-gb-bd-c-2);
+      color:var(--q-gb-t-c-18);
       background: var(--q-gb-bd-c-8);
     }
     .xia {
