--- a/src/base-h5/pages/details/styles/details-theme/odds_new.scss
+++ b/src/base-h5/pages/details/styles/details-theme/odds_new.scss
@@ -12,7 +12,7 @@
     color: var(--q-color-com-fs-color-10) !important;
   }
   .white_text {
-    color:var(--q-gb-bd-c-2) !important;
+    color:var(--q-gb-t-c-18) !important;
   }
   .odds-new2 {
     color: var(--q-gb-t-c-3);
