--- a/src/base-h5/pages/details/styles/details-theme/virtual_sports_tab.scss
+++ b/src/base-h5/pages/details/styles/details-theme/virtual_sports_tab.scss
@@ -68,7 +68,7 @@
         .result-list {
           .result-item {
             background: var(--q-gb-t-c-6);
-            color:var(--q-gb-bd-c-2);
+            color:var(--q-gb-t-c-18);
             &.item-W {
               background: var(--q-color-com-bg-color-13);
             }
@@ -100,7 +100,7 @@
   /*************** 白色分割线结束 *************** -E*/
   /*************** 马类编号开始 *************** -S*/
   .virtual-num {
-    color:var(--q-gb-bd-c-2);
+    color:var(--q-gb-t-c-18);
   }
 
   /*************** 马类编号结束 *************** -E*/
