--- a/src/base-h5/pages/details/styles/videos.scss
+++ b/src/base-h5/pages/details/styles/videos.scss
@@ -12,7 +12,7 @@
     top: 0px;
     width: 100%;
     height: 0.44rem;
-    color: var(--q-gb-bd-c-2);
+    color: var(--q-gb-t-c-18);
     z-index: 200;
     // box-shadow: 0 0.38rem 0.1rem rgba(66, 66, 66, 0.8) inset;
     // position: absolute;
@@ -28,7 +28,7 @@
     top: 0px;
     width: 100%;
     height: 0.44rem;
-    color: var(--q-gb-bd-c-2);
+    color: var(--q-gb-t-c-18);
     z-index: 200;
     box-shadow: var(--q-color-com-box-shadow-11);
 
@@ -43,7 +43,7 @@
         font-size: 0.12rem;
 
         &::before {
-          color: var(--q-gb-bd-c-2);
+          color: var(--q-gb-t-c-18);
         }
       }
     }
@@ -124,7 +124,7 @@
     z-index: 3;
     padding: 0.095rem 0.2rem;
     .font_color{
-      color: var(--q-gb-bd-c-2);
+      color: var(--q-gb-t-c-18);
       position: relative;
       top: -.02rem;
       margin-right: .15rem;
@@ -166,7 +166,7 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        color: var(--q-gb-bd-c-2);
+        color: var(--q-gb-t-c-18);
         background: var(--q-color-com-bg-color-5);
       }
     }
@@ -202,7 +202,7 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        color: var(--q-gb-bd-c-2);
+        color: var(--q-gb-t-c-18);
         position: relative;
         left: 0.2rem;
 
@@ -277,7 +277,7 @@
       width: 6.57rem;
       padding-right: .5rem;
       gap: .04rem;
-      color: var(--q-gb-bd-c-2);
+      color: var(--q-gb-t-c-18);
       transform: translate3d(100vw, 0, 0);
       transition: transform .2s ease-out;
       overflow-x: auto;
