--- a/project/yazhou-h5/src/pages/match-list/index.scss
+++ b/project/yazhou-h5/src/pages/match-list/index.scss
@@ -1,10 +1,17 @@
-.match-main {
-  max-width:3.78rem;
+
+/* ************** 赛事列表包装器 **************** -S */
+.match-list-page {
+  opacity: 1;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
   position: relative;
-  opacity: 1;
   transition: transform 0.2s;
+  padding-top: 1rem;
+  padding-bottom: 0.55rem;
+  /*border-top: 0.01rem solid transparent;*/
+  background: var(--q-gb-bg-c-17);
   .animation{
     animation: my-animation 0.3s ease-in
   }
@@ -32,100 +39,72 @@
 
   }
 
-  /* ************** 赛事列表包装器 **************** -S */
-  .match-list-container {
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
-    position: relative;
-    // padding-top: 0.67rem; // 减去0.4 因为顶部加了div
-    padding-bottom: 1.02rem;
-    /*border-top: 0.01rem solid transparent;*/
-
-    &.show-status {
-      padding-top:.94rem;
-    }
-
-    &.zaopan {
-      padding-top: 0.35rem;
-    }
-    &.esport {
-      padding-top:0.35rem;
-    }
-
-    &.guanjun {
-      padding-top: 0.63rem;
-    }
-
-    &.jinri {
-      padding-top: 0.63rem;
-    }
-
-    &.level_four_menu {
-      padding-top: 1.38rem;
-    }
-
-    &.jingzu {
-      padding-top: 0.07rem;
-    }
-
-    &.detail_match_list {
-      padding-top: 0;
-      padding-bottom: 0;
-      .refresh-container{
-        padding-top: 0;
-      }
-    }
-    .cover-loading {
-      width: 0.4rem;
-      display: block;
-      position: fixed;
-      left: 50%;
-      z-index: 30;
-      justify-content: center;
-      align-items: flex-start;
-      margin-left: -0.2rem;
-      margin-top: 1.68rem;
-    }
-
-    .loading-container {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 502;
-
-      &.dark {
-        background-color: transparent;
-      }
-    }
-    .loading-more-container {
-      width: 100%;
-      height: 1.81rem;
-      padding: 0.88rem 0 0.6rem 0;
-      text-align: center;
-      //bottom: -2rem;
-      //position: absolute;
-      //left: 0;
-      &.home_hot{
-        position: unset;
-        bottom: unset;
-      }
-    }
+  &.show-status {
+    padding-top:.94rem;
   }
 
+  &.zaopan {
+    padding-top:1.3rem;
+  }
+  &.esport {
+    padding-top:0.35rem;
+  }
 
-  /* ************** 赛事列表包装器 **************** -E */
-  .match-detail-container {
-    width:3.78rem;
-    height: auto;
+  &.guanjun {
+    padding-top: 1.1rem;
+  }
+
+  &.level_four_menu {
+    padding-top: 1.38rem;
+  }
+
+  &.jingzu {
+    padding-top: 0.4rem;
+  }
+
+  &.detail_match_list {
+    padding-top: 0;
+    padding-bottom: 0;
+    .refresh-container{
+      padding-top: 0;
+    }
+  }
+  .cover-loading {
+    width: 0.4rem;
+    display: block;
     position: fixed;
-    z-index: 502;
-    top: 0;
     left: 50%;
-    transform: translateX(-50%);
+    z-index: 30;
+    justify-content: center;
+    align-items: flex-start;
+    margin-left: -0.2rem;
+    margin-top: 1.68rem;
+  }
+
+  .loading-container {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 502;
+
+    &.dark {
+      background-color: transparent;
+    }
+  }
+  .loading-more-container {
+    width: 100%;
+    height: 1.81rem;
+    padding: 0.88rem 0 0.6rem 0;
+    text-align: center;
+    //bottom: -2rem;
+    //position: absolute;
+    //left: 0;
+    &.home_hot{
+      position: unset;
+      bottom: unset;
+    }
   }
 }
 
