--- a/src/base-h5/pages/match-list/styles/match-container.scss
+++ b/src/base-h5/pages/match-list/styles/match-container.scss
@@ -322,7 +322,7 @@
       display: flex;
       align-items: center;
       flex-wrap: nowrap;
-      padding: 0 0.1rem;
+      padding-right: 0.1rem;
       .league-collapse-dir {
         width: 0.12rem;
         height: 0.06rem;
@@ -331,6 +331,17 @@
 
         &.collapsed {
           transform: rotateZ(180deg);
+        }
+      }
+      .favorited-icon{
+        width: 0.3rem;
+        height: 100%;
+        padding-left: 10px;
+        position: relative;
+        top: 1px;
+        > img {
+          width: 0.14rem;
+          height: 100%;
         }
       }
     }
@@ -354,7 +365,6 @@
     height: 0.23rem;
     position: relative;
     flex-wrap: nowrap;
-    margin-left: 0.1rem;
     // transition: width 0.2s ease-in;
 
     .odd-title-i-w {
@@ -450,7 +460,7 @@
 
     .league-t-wrapper {
       line-height: 1;
-      min-width: 1.22rem;
+      min-width: 1.18rem;
       display: flex;
       font-size: .12rem;
     }
