--- a/src/base-h5/pages/match-list/styles/index.variables.scss
+++ b/src/base-h5/pages/match-list/styles/index.variables.scss
@@ -134,7 +134,7 @@
           color: var(--q-match-fs-color-1);
 
           .league-title-text {
-            color: var(--q-color-fs-color-34);
+            color: var(--q-gb-t-c-18);
           }
         }
         .odd-title-wraper {
