--- a/src/base-h5/pages/match-list/styles/match-overtime-pen.scss
+++ b/src/base-h5/pages/match-list/styles/match-overtime-pen.scss
@@ -28,6 +28,7 @@
       flex-wrap: nowrap;
       white-space: nowrap;
       flex-shrink: 0;
+      font-size: 12px;
 
       &:last-child {
         margin-right: 0;
