--- a/src/base-h5/pages/match-list/styles/match-container-champion.scss
+++ b/src/base-h5/pages/match-list/styles/match-container-champion.scss
@@ -87,6 +87,17 @@
           display: contents;
         }
       }
+      .collect-img{
+        width: 16px;
+        height: 16px;
+        text-align: center;
+        line-height: 20px;
+        margin: 0 6px 0 10px;
+        > img {
+          width: 14px;
+          height: 13px;
+        }
+      }
     }
 
     .collapse-dire {
@@ -122,11 +133,12 @@
   .limit-time {
     width: 100%;
     height: 0.25rem;
-    font-size: 0.1rem;
+    font-size: 0.11rem;
 
     &.first-t {
       padding-top: 0;
       height: 0.2rem;
+      margin-top: 0.05rem;
     }
 
     .limit-t-i {
