--- a/src/base-pc/pages/match-details/match-details.scss
+++ b/src/base-pc/pages/match-details/match-details.scss
@@ -178,16 +178,16 @@
         border-right: none !important;
       }
       .esports-head-info-100 {
-        background-image: url("/yazhou-pc/image/jpg/sports_bg_02_100.jpg") !important;
+        background-image: url($SCSSPROJECTPATH+"/image/jpg/sports_bg_02_100.jpg") !important;
       }
       .esports-head-info-101 {
-        background-image: url("/yazhou-pc/image/jpg/sports_bg_02_101.jpg") !important;
+        background-image: url($SCSSPROJECTPATH+"/image/jpg/sports_bg_02_101.jpg") !important;
       }
       .esports-head-info-102 {
-        background-image: url("/yazhou-pc/image/jpg/sports_bg_02_102.jpg") !important;
+        background-image: url($SCSSPROJECTPATH+"/image/jpg/sports_bg_02_102.jpg") !important;
       }
       .esports-head-info-103 {
-        background-image: url("/yazhou-pc/image/jpg/sports_bg_02_103.jpg") !important;
+        background-image: url($SCSSPROJECTPATH+"/image/jpg/sports_bg_02_103.jpg") !important;
       }
     }
     // 详情页顶部 title 公共样式
