--- a/src/base-pc/components/site-header/site-header.scss
+++ b/src/base-pc/components/site-header/site-header.scss
@@ -641,10 +641,10 @@
           color: var(--q-site-header-color-3);
         }
         .icon-balance_refresh {
-          background-image: url('/yazhou-pc/image/theme02/balance_refresh.svg');
+          background-image: url($SCSSPROJECTPATH+'/image/theme02/balance_refresh.svg');
           background-position: center;
           &:hover {
-            background-image: url('/yazhou-pc/image/theme02/balance_refresh_hover.svg');
+            background-image: url($SCSSPROJECTPATH+'/image/theme02/balance_refresh_hover.svg');
           }
         }
       }
@@ -1002,11 +1002,11 @@
         }
         .icon-balance_refresh {
             // TODO: 
-          background-image: url('/yazhou-pc/image/theme01/balance_refresh.svg');
+          background-image: url($SCSSPROJECTPATH+'/image/theme01/balance_refresh.svg');
           background-position: center;
           &:hover {
              // TODO: 
-            background-image: url('/yazhou-pc/image/theme01/balance_refresh_hover.svg');
+            background-image: url($SCSSPROJECTPATH+'/image/theme01/balance_refresh_hover.svg');
           }
         }
       }
