--- a/src/base-h5/pages/details/styles/tournament-play-new.scss
+++ b/src/base-h5/pages/details/styles/tournament-play-new.scss
@@ -96,13 +96,13 @@
 .icon_zd_select {
   width: 0.16rem;
   height: 0.14rem;
-  background: url("/yazhou-h5/image/svg/stick_btn_y0.svg") no-repeat center / 96% 96%;
+  background: url($SCSSPROJECTPATH + "/image/svg/stick_btn_y0.svg") no-repeat center / 96% 96%;
 }
 
 .icon_zd_default {
   width: 0.16rem;
   height: 0.14rem;
-  background: url("/yazhou-h5/image/svg/stick_btn_def.svg") no-repeat center / 96% 96%;
+  background: url($SCSSPROJECTPATH + "/image/svg/stick_btn_def.svg") no-repeat center / 96% 96%;
 }
 
 /* ************** 置顶按钮 *************** -E */
