feat:load_data组件与资源上传

--- a/project/yazhou-pc/src/layouts/content-layout.scss
+++ b/project/yazhou-pc/src/layouts/content-layout.scss
@@ -120,7 +120,7 @@ body {
 
     /* loading */
     .loading-text {
-      color: var(--q-layout-color-1);
+      color: var(--q-layout-color-1) !important;
     }
 
     .img-loading {
