--- a/project/yazhou-pc/src/layouts/match-list.scss
+++ b/project/yazhou-pc/src/layouts/match-list.scss
@@ -65,7 +65,7 @@ body {
 
     /*  详情页热门赛事 */
     .detais-hot-head {
-      color: var(gb-t-c-1);
+      color: var(--q-gb-t-c-1);
     }
 
     /* 无数据边框 */
