--- a/project/app-h5/src/pages/handicap-tutorial/index.scss
+++ b/project/app-h5/src/pages/handicap-tutorial/index.scss
@@ -24,7 +24,8 @@
     padding: .14rem .15rem;
     width: 100%;
     overflow-x: scroll;
-    
+    border-bottom: .08rem solid var(--q-gb-bd-c-6);
+
     .slide-item-active {
         span {
             background-color: var(--q-gb-t-c-1);
@@ -44,7 +45,7 @@
 }
 
 .ht-content {
-    border-top: .08rem solid var(--q-gb-bd-c-6);
+    padding-bottom: .2rem;
     .ht-title {
         margin: .15rem .15rem 0 .3rem;
         padding-bottom: .15rem;
@@ -83,6 +84,7 @@
             justify-content: flex-end;
             .teams-logo {
                 margin-left: .1rem;
+                margin-right: -.1rem;
             }
         }
         .center {
@@ -103,6 +105,7 @@
         .right {
             display: flex;
             .teams-logo {
+                margin-left: -.1rem;
                 margin-right: .1rem;
             }
         }
@@ -118,11 +121,98 @@
         .teams-logo {
             width: .4rem;
             height: .4rem;
-            background-color: var(--q-gb-t-c-1);;;
+            background-color: var(--q-gb-t-c-1);
             border-radius: .4rem;
             display: flex;
             justify-content: center;
             align-items: center;
+        }
+    }
+
+    .match-result {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: .3rem;
+        .left,.center,.right {
+            // flex: 1;
+            display: flex;
+        }
+        .left,.right {
+            width: 1.44rem;
+            height: .56rem;
+            display: flex;
+            position: relative;
+            .title {
+                font-size: .12rem;
+                color: var(--q-gb-bg-c-8);text-align: center;
+            }
+            .result {
+                font-size: .12rem;
+                color: var(--q-gb-bg-c-4);text-align: center;
+                margin-top: .03rem;
+            }
+            .win {
+                color: var(--q-gb-bd-c-8);
+            }
+        }
+        .win-icon {
+            position: absolute;
+            width: .2rem;
+            height: .2rem;
+            border-radius: .2rem;
+            background-color: var(--q-gb-t-c-1);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .left {
+            justify-content: center;
+            align-items: center;
+            background-image: linear-gradient(90deg, #e7edfe 0%, #fff 100%);
+            border-top-left-radius: .56rem;
+            border-bottom-left-radius: .56rem;
+            margin-right: -.24rem;
+            .win-icon {
+                left: .16rem;
+            }
+        }
+        .center {
+            justify-content: center;
+            z-index: 1;
+            .round-ball {
+                display: flex;
+                width: .66rem;
+                height: .66rem;
+                border-radius: .66rem;
+                flex-direction: column;
+                background-image: linear-gradient(270deg, #f3f6fe 0%, #f6f8fd 49.27%, #f4f6fb 100%);
+                justify-content: center;
+                align-items: center;
+                div {
+                    text-align: center;
+                }
+                .title {
+                    font-size: .12rem;
+                    color: var(--q-gb-bg-c-4);
+                }
+                .score {
+                    font-size: .16rem;
+                    color: var(--q-gb-t-c-1);
+                }
+                .text {
+                    font-size: .1rem;
+                    color: var(--q-gb-t-c-4);
+                }
+            }
+        }
+        .right {
+            justify-content: center;
+            align-items: center;
+            background-image: linear-gradient(120deg, #fff 0%, #e7edfe 100%);
+            border-top-right-radius: .56rem;
+            border-bottom-right-radius: .56rem;
+            margin-left: -24px;
         }
     }
 }
