fix：详情页面以及报错

--- a/project/app-h5/src/pages/details/styles/details.scss
+++ b/project/app-h5/src/pages/details/styles/details.scss
@@ -26,7 +26,7 @@
     &.text-active-tab {
       .q-tab__label {
         font-weight: bolder;
-        color: var(--q-detials-color-6);
+        color: var(--q-gb-t-c-1);
       }
     }
 
