--- a/src/base-h5/components/match-list/styles/match-container-2.scss
+++ b/src/base-h5/components/match-list/styles/match-container-2.scss
@@ -52,6 +52,9 @@
       border-top-left-radius: 0.08rem;
       border-top-right-radius: 0.08rem;
     }
+    &.collapsed{
+      margin-bottom: 0.05rem;
+    }
   }
 
   &.started_and_un_started {
@@ -74,11 +77,9 @@
     width: 100%;
     display: block;
     position: relative;
-    margin-bottom: 0.03rem;
     transition: max-height 0.3s;
 
     .match-odds-container-border-radius {
-      border-radius: .08rem;
       overflow: hidden;
     }
 
@@ -108,6 +109,9 @@
 
     .no-radius {
       border-radius: unset;
+    }
+    .no-border{
+      border: none !important;
     }
 
     .odd-list-inner.odd {
@@ -170,17 +174,17 @@
   }
 
   .sport-title {
-    width: 96%;
-    display: flex;
-    align-items: center;
-    padding-left: 0.1rem;
-    height: 0.26rem;
-    line-height: 0.26rem;
-    font-size: 0.11rem;
-    // gb-bg-lg-28 还未配置
-    background-image: var(--q-gb-bg-lg-28);
-    margin-top: 0.11rem;
-    border-radius: 0.06rem;
+    width: 100%;
+    height: 20px;
+    border-radius: 0;
+    font-size: 12px;
+    padding: 0 5px 0 20px;
+    background: #f7f9fe;
+    line-height: 22px;
+    font-size: 11px;
+    .league-collapse-dir{
+      display: none;
+    }
 
     &.first {
     }
@@ -302,12 +306,10 @@
 
   /* **************联赛展示********************** -S*/
   .league {
-    border-radius: 0.08rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 0.4rem;
-    margin: 0.03rem;
+    height: 0.26rem;
+    border-bottom: 1px solid #e9e9e9 !important;
+    background: #fff !important;
+    border-radius: 0;
 
     &.show-sport {
       border-radius: 0.12rem 0.12rem 0 0;
@@ -365,7 +367,7 @@
         }
       }
     }
-
+    
     .dir {
       margin-right: 0.09rem;
 
@@ -382,19 +384,22 @@
   }
 
   .odd-title-wraper {
-    height: 0.23rem;
+    height: 0.2rem;
     position: relative;
     flex-wrap: nowrap;
-    // transition: width 0.2s ease-in;
+    display: flex;
+    font-size: 0.1rem;
+    color: #303442;
+    flex-direction: row-reverse;
+    background: #fff;
+    border-bottom: 1px solid #e9e9e9;
 
     .odd-title-i-w {
-
+      width: 50%;
       margin-right: 2%;
       overflow: hidden;
 
       .odd-t-i-wrapper {
-        padding-top: 0.01rem;
-
         flex-shrink: 0;
         transition: transform 0.2s;
 
@@ -449,18 +454,12 @@
   .league-title-text {
     font-size: 0.13rem;
     height: 100%;
-
-    // transform: calc(0, 0.01rem);
     transform: translateY(1px);
     text-overflow: ellipsis;
     width: 3.18rem;
     flex-wrap: nowrap;
     align-items: center;
     overflow: hidden;
-    height: 25px;
-    background: #fff;
-    border-radius: 0;
-    border-bottom: 1px solid #e9e9e9;
 
     .league-t-wrapper {
       line-height: 1;
@@ -548,7 +547,6 @@
 
     &.n-s-edition {
       padding-top: 0;
-      padding-bottom: 0.05rem;
 
       &:before {
         display: none;
@@ -598,8 +596,9 @@
 
       .score-wrapper {
         margin-top: 0.04rem;
-        height: 0.3rem;
         padding-left: 0.05rem;
+        position: absolute;
+        bottom: 0;
 
         .score-section {
           padding-left: 0;
@@ -747,13 +746,11 @@
           }
 
           .team-t-title-w {
-
-            font-size: 0.14rem;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            line-height: 0.2rem;
+            font-size: 0.12rem;
             height: 0.2rem;
+            line-height: 0.15rem;
+            -webkit-line-clamp: 2;
+            display: flex;
 
             &.is-handicap {
               font-weight: bold;
@@ -892,7 +889,7 @@
   background-color: var(--q-color-com-bg-color-12);
   width: 100%;
   padding: 0 0.08rem;
-  height: 0.34rem;
+  height: 0.2rem;
   display: flex;
   align-items: center;
   margin: 0 auto;
@@ -914,7 +911,6 @@
 
   &.n-s-edition {
     padding-top: 0.03rem;
-    height: 0.3rem;
     position: relative;
 
     &:before {
