fix:详情盘口模块

--- a/project/app-h5/src/layouts/index.scss
+++ b/project/app-h5/src/layouts/index.scss
@@ -75,7 +75,7 @@
       position: absolute;
       left: 0;
       top: 0;
-      border: 1px solid var(--q-gb-bd-c-3) !important;
+      border: none !important;
       // border: 1px solid red !important; 调试
       border-radius: 0.16rem;
       width: 200%;
